# Chatroom

./: .env.template  .gitignore  Makefile  README.md  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  manage.py  requirements.txt
backend/: Dockerfile  manage.py  pyproject.toml
backend/Chatroom/: routing.py  settings.py  urls.py
backend/chat/: forms.py  models.py  views.py
backend/chat/migrations/: 0002_connection_username.py  0004_auto_20200227_1659.py
backend/scripts/: wait_for_db.sh
backend/src/: api_urls.py  asgi.py  celery.py  routing.py  settings.py  urls.py  wsgi.py
backend/src/apps/authentication/: admin.py  emails.py  models.py  serializers.py  services.py  urls.py  views.py
backend/src/apps/authentication/migrations/: 0001_initial.py  (+1 more)
backend/src/apps/chat/: admin.py  consumers.py  models.py  querysets.py  routing.py  serializers.py  services.py  tests.py  urls.py  views.py
backend/src/apps/profile/: admin.py  apps.py  models.py  views.py
backend/src/apps/users/: models.py  views.py
backend/src/apps/ws_authentication/: admin.py  apps.py  middleware.py  models.py  serializers.py  services.py  urls.py  views.py
backend/src/templates/: email_base.html
backend/src/templates/authentication/: email_address_confirmation_email.html  email_address_confirmation_email.txt
backend/src/utils/: helpers.py  mixins.py
backend/templates/: base.html
backend/templates/chat/: home.html  room.html
backend/tests/: conftest.py  factories.py  helpers.py
backend/tests/test_apps/test_authentication/: test_models.py  test_services.py
backend/tests/test_apps/test_chat/: test_consumers.py  test_models.py
backend/tests/test_apps/test_ws_authentication/: test_models.py  test_services.py
backend/users/: forms.py
backend/users/templates/users/: register.html
(+106 files in other folders)
