[tool.poetry]
name = "Chatroom"
version = "0.1.0"
description = ""
authors = ["Mateusz Ostalecki"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.1.4"
channels = "^3.0.2"
Pillow = "^8.0.1"
psycopg2 = "^2.8.6"
channels_redis = "^3.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
