[tool.poetry]
name = "Chatroom"
version = "0.1.0"
description = ""
authors = ["Mateusz Ostalecki"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.1.4"
channels = "^3.0.2"
Pillow = "^8.0.1"
psycopg2 = "^2.8.6"
channels_redis = "^3.2.0"
ipython = "^7.19.0"
djangorestframework-simplejwt = "^4.6.0"
djangorestframework = "^3.12.2"
djangorestframework-camel-case = "^1.2.0"
celery = "^5.0.5"
redis = "^3.5.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
